Add ImmutableMap and ImmutableSet objects.